--- a/css/style.scss
+++ b/css/style.scss
@@ -20,13 +20,15 @@ $font1:'Open Sans', sans-serif;
   .inBody{
     width: auto;
   }
+  .formWidth{
+    width: 90%;
+  }
   .my-custom-nav .navbar-collapse .navbar-nav > li {padding-left:15px!important;}
 
   .my-custom-nav .user-dropdown > .dropdown-menu > li {padding-left:5px!important;}
 
 
 }
-
 
 
 @mixin welcomeFont(){
