--- a/css/site.css
+++ b/css/site.css
@@ -1,17 +1,35 @@
+body{
+    background-color: #204577;
+    height: 100%;
+}
 .body{
+    background-color: white;
     width: 70%;
+    padding-bottom: 20px;
     margin: auto;
 }
 .navMyWidth{
     width: 80%;
 }
 .cursor {cursor:pointer}
+.formWidth {
+    width: 50%;
+}
 .regInputs {
     width: 40%;
     padding: 10px;
 }
 .regInputs div,label {
     padding: 5px;
+}
+.results tr[visible='false'],
+.no-result{
+    display:none;
+}
+
+.results tr[visible='true']{
+
+    display:table-row;
 }
 .regWelcome{
 
@@ -25,14 +43,23 @@
     text-align:center;
  }
 .inBody {
-    width: 80%;
+    width: 90%;
     margin: auto;
 }
 #footer {
-    padding-top: 10px;
-    height: 40px;
+    height: 60px;
     background-color: #f5f5f5;
 }
-#footer div div{
-    padding-top: 1px;
+#wrap {
+    min-height: 100%;
+    height: auto;
+    /* Negative indent footer by its height */
+    margin: 0 auto -60px;
+    /* Pad bottom by footer height */
+    padding: 0 0 60px;
+}
+
+#main {
+    overflow:auto;
+    padding-bottom:150px; /* this needs to be bigger than footer height*/
 }
