--- a/css/style.scss
+++ b/css/style.scss
@@ -23,6 +23,10 @@ $font1:'Open Sans', sans-serif;
   .formWidth{
     width: 90%;
   }
+  .panel {
+    margin-bottom: auto;
+    width: auto;
+  }
   .my-custom-nav .navbar-collapse .navbar-nav > li {padding-left:15px!important;}
 
   .my-custom-nav .user-dropdown > .dropdown-menu > li {padding-left:5px!important;}
