Contest 1.1 Verseny listázás. Verseny megtekintés. Verseny megtekintésnél a szervező szervezet tudja szerkeszteni az adatokat (Ez még kidolgozatlan állapotban van). Competetion- Class létrehozva a verseny számok egyszerűbb kezeléséhez. DBClass Interfész azt a metódust tartalmazza amik a hozzá implementált adatábázis adatokból dolgozó osztályokhoz kell

--- a/css/site.css
+++ b/css/site.css
@@ -1,12 +1,20 @@
 body{
-    background-color: #204577;
+    /*background-color: #204577; */
+    background-color: #c7ddef;
     height: 100%;
+}
+label {
+    font-weight: normal;
 }
 .body{
     background-color: white;
     width: 70%;
     padding-bottom: 20px;
     margin: auto;
+}
+.btn-responsive {
+    white-space: normal !important;
+    word-wrap: break-word;
 }
 .navMyWidth{
     width: 80%;
