--- a/css/site.css
+++ b/css/site.css
@@ -17,7 +17,25 @@ div.vertical-header
     -o-transform: rotate(-90deg); /* Opera */
     -ms-transform: rotate(-90deg); /* IE 9 */
 }
-
+body.loading .modal {
+    display: block;
+}
+body.loading-gif{
+    overflow: hidden;
+}
+.modal-gif {
+    display:    none;
+    position:   fixed;
+    z-index:    1000;
+    top:        0;
+    left:       0;
+    height:     100%;
+    width:      100%;
+    background: rgba( 255, 255, 255, .8 )
+    url("ajax-loader.gif")
+    50% 50%
+    no-repeat;
+}
 td.vertical-header
 {
     height: 150px;
